--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-383.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇳🇱 荷兰-185.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇯🇵 日本-495.1KB/s(Youtube:不良林), server: tt6.tjvpn.top, port: 443, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt6.tjvpn.top, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-931.7KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-182.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇨🇦 加拿大-652.0KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇺🇸 美国-593.9KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-220.6KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇨🇳 台湾-2.13MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-182.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-652.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
