--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-527.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇭🇰 香港-3.16MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-312.9KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-763.0KB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇬🇧 英国-374.5KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-477.5KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇫🇷 法国-3.14MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-2.57MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-407.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-304.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.58MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.63MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇭🇰 香港-359.9KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-374.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-359.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
